Bug 52989 - : Writer in 3.5.4 Linux(ubuntu) and 3.5.5 (XP) displays graphics in .rtf format <5mm wide
Summary: : Writer in 3.5.4 Linux(ubuntu) and 3.5.5 (XP) displays graphics in .rtf form...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.4 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:3.7.0 target:3.6.4
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-07-31 06:27 UTC by Oldbwl
Modified: 2015-12-17 12:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Story book with many images (1.93 MB, application/msword)
2012-07-31 06:27 UTC, Oldbwl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oldbwl 2012-07-31 06:27:42 UTC
Created attachment 64978 [details]
Story book with many images

Problem description: 
Loading any .rtf document containing images results in the images displaying as only a few mm wide. It is possible to right click image, Picture/Original Size etc. However, the original documents do load and display images correctly in MS Word and other .rtf readers.

Steps to reproduce:
1. Load Document in various operating systems and readers on clean installs and find images.
2. Checked that Display Images is selected in Options.
3. Images too small to see - only 3 or 4mm wide at most
4. Right click image select Picture, then Original Sixe button, and image is restored.
5. Exit without save, check image dimensions with plain text reader, note that image size properties are indeed correct.


Current behaviour:
Images in .rtf documents load and ignore preset image dimensions, displaying very small

Expected behavior:
Image dimensions should set size of image in document

Platform (if different from the browser): 
Ubuntu 12.04 and Win XP
              
Browser: Mozilla/5.0 (Windows NT 5.1; rv:14.0) Gecko/20100101 Firefox/14.0.1
Comment 1 Jean-Baptiste Faure 2012-07-31 18:59:10 UTC
Reproducible with LO 3.5.5.3, LO 3.6.0.4 and master (Version 3.7.0.0.alpha0+ (Build ID: e1544be)) under Ubuntu 11.10 x86_64.

Miklos: please could you have a look ?

Best regards. JBF
Comment 2 Pedro 2012-10-28 19:42:01 UTC
I can confirm that this happens in LO 3.5.5 and 3.6.2 under Windows XP.

The images show correctly in LO 3.3.4 and 3.4.5 so it is a regression since the 3.5.x branch.
Comment 3 Pedro 2012-10-29 12:35:13 UTC
I can also confirm that the regression is present in master.

The same problem occurs in Version 3.7.0.0.alpha0+ (Build ID: 370m0(Build:0))
downloaded from
/daily/W2008R2@16-minimal_build/master/2012-10-28_23.54.54
Comment 4 Not Assigned 2012-11-05 15:55:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebc61e11cdb02f5cc33aeabead3d191eaf0d23d3

fdo#52989 ignore provided size of JPEG files during RTF import



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2012-11-05 16:37:53 UTC
Fixed in master, -3-6 review: https://gerrit.libreoffice.org/991
Comment 6 Not Assigned 2012-11-06 13:57:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2bccaecfb4f9b31964bc8789c3bd5d7080bfc4d9&g=libreoffice-3-6

fdo#52989 ignore provided size of JPEG files during RTF import


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Jean-Baptiste Faure 2012-11-08 06:16:35 UTC
Verified in Version 3.6.4.0+ (Build ID: 7ec1ae3)
Thank you very much.

Best regards. JBF
Comment 8 Robinson Tryon (qubit) 2015-12-17 12:07:50 UTC Comment hidden (obsolete)