fdo#52989 ignore provided size of JPEG files during RTF import

See commit 66fa759b for rationale, this fix just does the same for JPEG
files as well.

Change-Id: I6a9ead5f4b4b9c4661cae99501bd7c14a2a79409