writerfilter/source/rtftok/rtfdocumentimpl.hxx
@@ -222,7 +222,8 @@ namespace writerfilter {
         enum RTFBmpStyles
         {
             BMPSTYLE_NONE,
-            BMPSTYLE_PNG
+            BMPSTYLE_PNG,
+            BMPSTYLE_JPEG
         };
 
         enum RTFFieldStatus
